--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.0.4",
+    "namor": "^2.0.2",
     "next": "10.0.6",
+    "postcss": "^8.1.10",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-table": "^7.6.3",
+    "react-virtuoso": "^1.5.4",
+    "tailwindcss": "^2.0.2"
   }
 }
