--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.1.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
     "react-table": "^7.6.3",
     "react-virtuoso": "^1.5.4",
     "tailwindcss": "^2.0.2"
