--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reach/menu-button": "^0.13.0",
     "autoprefixer": "^10.0.4",
     "namor": "^2.0.2",
     "next": "10.0.6",
@@ -16,7 +17,10 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
     "react-table": "^7.6.3",
+    "react-tiny-popover": "^6.0.4",
+    "react-use": "^17.1.0",
     "react-virtuoso": "^1.5.4",
+    "reakit": "^1.3.5",
     "tailwindcss": "^2.0.2"
   }
 }
